--- a/templates/milestones/edit.html
+++ b/templates/milestones/edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit Milestone - {{ milestone.name }}{% endblock %}
+{% block title %}Edit Milestone 1234 - {{ milestone.name }}{% endblock %}
 
 {% block content %}
 <div class="container-fluid px-2 px-md-3">
